cmake_minimum_required(VERSION 3.5)
project(pcapwrapper_example CXX)

include_directories("/usr/include/pcapwrapper/")

MACRO(ADD_DEFAULT_TARGET name path)
    file(GLOB_RECURSE SOURCES ${path})
    add_executable(${name} ${SOURCES})
    target_link_libraries(${name} "pcapwrapper")
    target_link_libraries(${name} "pcap")
    target_link_libraries(${name} "pthread")
ENDMACRO()

#Add targets
ADD_DEFAULT_TARGET(detectdns "DetectDNSs/*.cpp")
ADD_DEFAULT_TARGET(dhcprelease "DHCPRelease/*.cpp")
ADD_DEFAULT_TARGET(dnsspoof "DNSSpoof/*.cpp")
ADD_DEFAULT_TARGET(networkanalyse "NetworkAnalyse/*.cpp")
ADD_DEFAULT_TARGET(networkjammer "NetworkJammer/*.cpp")
ADD_DEFAULT_TARGET(networkmonitor "NetworkMonitor/*.cpp")
ADD_DEFAULT_TARGET(networkmonitordns "NetworkMonitorDNS/*.cpp")
ADD_DEFAULT_TARGET(networkmonitorwebsite "NetworkMonitorWebsites/*.cpp")
ADD_DEFAULT_TARGET(networkmonitorcookies "NetworkMonitorCookies/*.cpp")
ADD_DEFAULT_TARGET(detectnetworkarp "DetectNetworkARP/*.cpp")
ADD_DEFAULT_TARGET(detectnetworkicmp "DetectNetworkICMP/*.cpp")
ADD_DEFAULT_TARGET(detectnetworkudp "DetectNetworkUDP/*.cpp")
ADD_DEFAULT_TARGET(detectportstcp "DetectPortsTCP/*.cpp")
ADD_DEFAULT_TARGET(detectportsudp "DetectPortsUDP/*.cpp")
ADD_DEFAULT_TARGET(networkreadpcap "NetworkReadPCAP/*.cpp")
ADD_DEFAULT_TARGET(networksendpcap "NetworkSendPCAP/*.cpp")
ADD_DEFAULT_TARGET(networkstorepcap "NetworkStorePCAP/*.cpp")
ADD_DEFAULT_TARGET(outgoingconnections "OutgoingConnections/*.cpp")
ADD_DEFAULT_TARGET(traceroute "Traceroute/*.cpp")
ADD_DEFAULT_TARGET(victimisup "VictimIsUp/*.cpp")
ADD_DEFAULT_TARGET(victimsmonitor "VictimsMonitor/*.cpp")
ADD_DEFAULT_TARGET(victimsmurfattack "VictimSmurfAttack/*.cpp")
